test/expect/cmd.gccxml-and-c++14.stderr.txt
^error: '--castxml-gccxml' does not work with c\+\+14$
